WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186557
[GTK][WPE] MiniBrowsers should be able to ignore TLS errors
https://bugs.webkit.org/show_bug.cgi?id=186557
Summary
[GTK][WPE] MiniBrowsers should be able to ignore TLS errors
Zan Dobersek
Reported
2018-06-12 01:44:06 PDT
[GTK] Ignore TLS errors when running WPT suite
Attachments
Patch
(3.58 KB, patch)
2018-06-12 01:54 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(4.30 KB, patch)
2018-06-14 01:42 PDT
,
Zan Dobersek
cgarcia
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2018-06-12 01:54:05 PDT
Created
attachment 342522
[details]
Patch
Carlos Garcia Campos
Comment 2
2018-06-12 02:36:39 PDT
Comment on
attachment 342522
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342522&action=review
> Tools/Scripts/webkitpy/webdriver_tests/webdriver_driver_gtk.py:42 > - return ['--automation', '--javascript-can-open-windows-automatically=true', '--enable-xss-auditor=false'] > + return ['--automation', '--javascript-can-open-windows-automatically=true', > + '--enable-xss-auditor=false', '--ignore-tls-errors=true']
I don't think we should do this here. We should implement and use acceptInsecureCerts capability instead. If we send this capability as part of the StartAutomationSession message, we can handle it internally without having to add an option to MiniBrowser and it will work with any browser. That's what I planned to do for the proxy capabilities.
Carlos Garcia Campos
Comment 3
2018-06-12 06:25:11 PDT
Bug #186560
is what I meant, but I'm not sure we will be able to use that approach in the end, because w3c tests don't allow to pass capabilities that are also added by the tests themselves. If we can't change the w3c tests behavior, then the patch attached here would be the only way, I think.
Zan Dobersek
Comment 4
2018-06-14 01:42:37 PDT
Created
attachment 342728
[details]
Patch
EWS Watchlist
Comment 5
2018-06-14 01:44:16 PDT
Attachment 342728
[details]
did not pass style-queue: ERROR: Tools/MiniBrowser/wpe/main.cpp:53: Use nullptr instead of NULL. [readability/null] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 6
2018-06-14 01:51:52 PDT
Comment on
attachment 342728
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342728&action=review
Thanks!
> Tools/MiniBrowser/wpe/main.cpp:53 > + { "ignore-tls-errors", 0, 0, G_OPTION_ARG_NONE, &ignoreTLSErrors, "Ignore TLS errors", NULL },
Use nullptr here, WPE MiniBrowser is c++ not c.
Zan Dobersek
Comment 7
2018-06-14 01:57:06 PDT
Committed
r232834
: <
https://trac.webkit.org/changeset/232834
>
Radar WebKit Bug Importer
Comment 8
2018-06-14 01:58:18 PDT
<
rdar://problem/41118909
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug