[GTK][WPE] MiniBrowsers should be able to ignore TLS errors https://bugs.webkit.org/show_bug.cgi?id=186557

Reviewed by Carlos Garcia Campos.

Add the --ignore-tls-errors flags to the GTK and WPE MiniBrowsers.
Enabling the flag enforces ignoring of TLS errors that occur during
load. This is primarily useful for loading test cases from the wpt or
run-webkit-httpd servers where testing-purpose certificates are used.

* MiniBrowser/gtk/main.c:
(main):
* MiniBrowser/wpe/main.cpp:
(main):


Canonical link: https://commits.webkit.org/201943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232834 268f45cc-cd09-0410-ab3c-d52691b4dbfc