Tools/MiniBrowser/wpe/main.cpp
@@ -36,6 +36,7 @@ static const char** ignoreHosts;
 static gboolean headlessMode;
 static gboolean privateMode;
 static gboolean automationMode;
+static gboolean ignoreTLSErrors;
 static const char* cookiesFile;
 static const char* cookiesPolicy;
 static const char* proxy;
@@ -49,6 +50,7 @@ static const GOptionEntry commandLineOptions[] =
     { "cookies-policy", 0, 0, G_OPTION_ARG_STRING, &cookiesPolicy, "Cookies accept policy (always, never, no-third-party). Default: no-third-party", "POLICY" },
     { "proxy", 0, 0, G_OPTION_ARG_STRING, &proxy, "Set proxy", "PROXY" },
     { "ignore-host", 0, 0, G_OPTION_ARG_STRING_ARRAY, &ignoreHosts, "Set proxy ignore hosts", "HOSTS" },
+    { "ignore-tls-errors", 0, 0, G_OPTION_ARG_NONE, &ignoreTLSErrors, "Ignore TLS errors", nullptr },
     { G_OPTION_REMAINING, 0, 0, G_OPTION_ARG_FILENAME_ARRAY, &uriArguments, nullptr, "[URL]" },
     { nullptr, 0, 0, G_OPTION_ARG_NONE, nullptr, nullptr, nullptr }
 };
@@ -179,6 +181,9 @@ int main(int argc, char *argv[])
 
     webkit_web_context_set_automation_allowed(webContext, automationMode);
     g_signal_connect(webContext, "automation-started", G_CALLBACK(automationStartedCallback), webView);
+
+    if (ignoreTLSErrors)
+        webkit_web_context_set_tls_errors_policy(webContext, WEBKIT_TLS_ERRORS_POLICY_IGNORE);
 
     if (uriArguments)
         webkit_web_view_load_uri(webView, uriArguments[0]);
